--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
     </form>
 
     <!-- display del meteo sotto forma di card -->
-    <h1 class="cityDisplay">Pomi</h1>
-    <p class="tempDisplay">28°C</p>
-    <p class="humidityDisplay"> Umidità: 70%</p>
-    <p class="descDisplay">Cielo sereno</p>
-    <p class="weatherEmoji">☀️</p>
-    <p class="errorDisplay">Please enter a city</p>
+    <div class="card">
 
+        <h1 class="cityDisplay">Pomi</h1>
+        <p class="tempDisplay">28°C</p>
+        <p class="humidityDisplay"> Umidità: 70%</p>
+        <p class="descDisplay">Cielo sereno</p>
+        <p class="weatherEmoji">☀️</p>
+        <p class="errorDisplay">Please enter a city</p>
+
+    </div>
 
 
 
