--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </form>
 
     <!-- display del meteo sotto forma di card -->
-    <div class="card">
+    <div class="card" style="display: none;">
 
         <h1 class="cityDisplay">Pomi</h1>
         <p class="tempDisplay">28°C</p>
